[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kvagent"
version = "0.1.0"
description = "Cache-aware prompt compiler and benchmark for multi-agent LLM workflows on vLLM"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Abhinav Palivela"}]
dependencies = [
  "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
kvagent-bench = "kvagent.benchmark:main"
kvagent-analyze = "kvagent.analyze:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
